# marketplace-ops-intelligence

./: .env.example  .gitignore  API_CONTRACT.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_batch.yml  verify_pipeline.yml
backend/api/: main.py
backend/ingestion/: carpark.py  loader.py  lta_poller.py  train_disruptions.py  travel_times.py  weather.py
backend/intervention/: __init__.py  action_effects.py  action_selector.py  constraints.py  policy.py  state_tracker.py
backend/modeling/: __init__.py  demand_pressure.py  imbalance.py  shortage.py
backend/monitoring/: alerting.py  drift.py  metrics.py
backend/preprocessing/: pipeline.py
backend/promotion/: gate.py
backend/recommendations/: action_catalog.py  baseline_policy.py  cost_model.py  decision_optimizer.py  engine.py  evaluation.py  outcome_tracker.py  zone_graph.py  (+1 more)
config/: config.yaml  zone_adjacency.yaml
frontend-react/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
notebooks/: exp1_baseline.ipynb  exp2_feature_engineering.ipynb  exp3_imbalanced.ipynb  exp4_automl.ipynb  exp5_error_analysis.ipynb  exp6_improvements.ipynb
scripts/: build_training_data.py  download_data.py  run_monitoring.py  run_scoring.py  run_training.py
tests/: test_alerting.py  test_api.py  test_drift.py  test_imbalance_system.py  test_ingestion.py  test_intervention_engine.py  test_outcomes_learning.py  test_pipeline_integration.py  test_preprocessing.py  test_registry.py  test_rollback.py  test_scoring.py  test_trainer.py  test_validation.py
(+39 files in other folders)
