[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-ops-intelligence"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "imbalanced-learn>=0.12",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyarrow>=15.0",
    "requests>=2.31",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "shap>=0.45",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "xgboost>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
